// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display errors 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"signup-page\\">
  <form class=\\"form\\">
    <div class=\\"logo\\"><span><span>[</span> {{ logoText }} <span>]</span></span></div>
    <!--0-->
    <!--0-->
    <ul class=\\"errors-panel\\">
      <li>Signup fail</li>
    </ul>
    <!--0-->
    <!--1-->
    <div class=\\"form-group\\">
      <input name=\\"name\\" type=\\"text\\" placeholder=\\"Enter your username\\" autofocus=\\"\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"email\\" type=\\"text\\" placeholder=\\"Enter your email\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password\\" type=\\"password\\" placeholder=\\"Enter your password\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password2\\" type=\\"password\\" placeholder=\\"Confirm your password\\">
    </div>
    <!--2-->
    <button type=\\"submit\\">
      <!--3-->Sign Up
      <!--4-->
    </button>
    <div class=\\"signup-label\\"> Already a member? <a href=\\"/\\"> Sign In </a>
    </div>
    <!--5-->
  </form>
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"signup-page\\">
  <form class=\\"form\\">
    <div class=\\"logo\\"><span><span>[</span> {{ logoText }} <span>]</span></span></div>
    <!--0-->
    <!--0-->
    <!--0-->
    <!--1-->
    <div class=\\"form-group\\">
      <input name=\\"name\\" type=\\"text\\" placeholder=\\"Enter your username\\" autofocus=\\"\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"email\\" type=\\"text\\" placeholder=\\"Enter your email\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password\\" type=\\"password\\" placeholder=\\"Enter your password\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password2\\" type=\\"password\\" placeholder=\\"Confirm your password\\">
    </div>
    <!--2-->
    <button type=\\"submit\\">
      <!--3-->Sign Up
      <!--4-->
    </button>
    <div class=\\"signup-label\\"> Already a member? <a href=\\"/\\"> Sign In </a>
    </div>
    <!--5-->
  </form>
</div>
",
}
`;
